# JavaProject

./: .classpath  .gitignore  .project  CMakeLists.txt  Makefile  Pastel-Palettes.sln  Pastel-Palettes.vcxproj  Pastel-Palettes.vcxproj.filters  dense_lu_test.cu  main.cpp  main.cu  pivot.cu  pom.xml  svd.cu  test.cu
H2Matrix/: H2Matrix.vcxproj  main.cpp
HMatrix/: HMatrix.vcxproj  HMatrix.vcxproj.filters  main.cpp  main.cu
My Inspector Results - Pastel-Palettes/: My Inspector Results - Pastel-Palettes.inspxeproj
cuda_src/: cuda_helper_functions.cu  cuda_helper_functions.cuh  dense_lu.cu  dense_lu.cuh  dense_lu_test.cpp  gpu_lu.cu  gpu_lu.cuh  helper_functions.cpp  helper_functions.h  pivot.cu  pivot.cuh  rsvd.cu  svd.cpp  tile_lu.cpp
docs/: 203.pptx  CONTRIBUTING.md  README.md  defense.pptx  poster.pub  poster_crest.pub  write up.docx
include/: compressor.cuh  cuda_helper_functions.cuh  cuda_timer.cuh  dag.cuh  definitions.cuh  dense_getrf.cuh  dense_lu.cuh  dev_dense.cuh  dev_dense_funcs.cuh  dev_hierarchical.cuh  dev_hierarchical_element.cuh  dev_hierarchical_index.cuh  dev_hierarchical_ops.cuh  dev_hierarchical_ops_dag.cuh  dev_instructions.cuh  dev_low_rank.cu  dev_low_rank.cuh  dev_low_rank_funcs.cuh  dev_temp.cuh  get_ops.cuh  gpu_lu.cuh  helper_functions.h  index.cuh  inst_handler.cuh  inst_scheduler.cuh  instructions_manager.cuh  instructions_scheduler.cuh  intellisense.cuh  kernel.cu  kernel.cuh  kernel_cublas.cuh  launcher.cuh  main.cu  ops.cuh  pivot.cuh  pspl.cuh  svd.cuh  timer.cuh
legacy/: dense_lu.cuh  dense_lu_test.cu  get_ops.cuh  kernel.cuh  (+1 more)
(+132 files in other folders)
